openshift-manifests/neo4j-deploy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: neo4j-dev
  labels:
    app: neo4j-dev
  namespace: default
spec:
  containers:
    - name: neo4j-dev
      image: 'neo4j:latest'
      ports:
        - containerPort: 7473
          protocol: TCP
        - containerPort: 7474
          protocol: TCP
        - containerPort: 7687
          protocol: TCP
      imagePullPolicy: Always
