openshift-manifests/fhir-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fhir-chatbot-service
spec:
  selector:
    app: fhir-chatbot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
